--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 			<version>3.0.2</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
