selesai kegiatan modul 7

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret=aHR0cHM6Ly93d3cueW91dHViZS5jb20vd2F0Y2g/dj1kUXc0dzlXZ1hjUQ==
 jwt.expiration=86400000
+
+springdoc.api-docs.path=/docs/open-api
+
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/docs/swagger-ui
+springdoc.swagger-ui.try-it-out-enabled=false
+springdoc.swagger-ui.filter=false
+springdoc.swagger-ui.syntax-highlight.activated=true
